# ServidorRust

./: .env  Cargo.toml
fronendTareas/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
fronendTareas/e2e/src/: app.e2e-spec.ts
fronendTareas/src/: index.html
fronendTareas/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts
fronendTareas/src/environments/: environment.ts
fronendTareas/src/modulos/: homework.ts
migrations/2021-06-04-021512_create_homeworks/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  routers.rs  schema.rs
