[package]
name = "servidorGestion"
version = "0.1.0"
authors = ["akilexz <joel.castro.espinosa.1i@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

diesel = {version = "1.3.3", features = ["postgres"]}   
dotenv = "0.15.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"

rocket = "0.4.0-dev"
rocket_cors = "0.5.0"

[dependencies.rocket_contrib]

version = "0.4.0-dev"
default_features = false
features = ["json", "serve"]

[dev-dependencies]
cargo-watch = "7.7.0"

